--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-openai>=1.1.7",
     "langchain-text-splitters>=1.1.0",
+    "pip>=26.0.1",
     "python-dotenv>=1.2.1",
     "tiktoken>=0.12.0",
     "youtube-transcript-api>=1.2.4",
